# swagger/swagger.json
@@ -39,6 +39,11 @@
       "post": {
         "summary": "Create a new route",
         "tags": ["Route"],  
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -97,6 +102,11 @@
       "delete": {
         "summary": "Delete a route by route number",
         "tags": ["Route"], 
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "routeNumber",
@@ -120,6 +130,14 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "description": "JWT Authorization header using the Bearer scheme"
+      }
+    },
     "schemas": {
       "Route": {
         "type": "object",
